--- a/client/src/app/lesson/lesson-item/lesson-item.component.scss
+++ b/client/src/app/lesson/lesson-item/lesson-item.component.scss
@@ -9,7 +9,9 @@
       text-align: center;
       display: flex;
       align-items: center;
-      text-decoration: underline;
+      span {
+        text-decoration: underline;
+      }
       cursor: pointer;
     }
 
