--- a/client/src/app/lesson/playground/playground.component.html
+++ b/client/src/app/lesson/playground/playground.component.html
@@ -1,5 +1,5 @@
 <div class="page-title">
-    Lesson playground
+    Hacker playground
 </div>
 
 <div class="back-to-lesson-button">
@@ -11,25 +11,8 @@
 
 <div class="playground-container mt-9 flex flex-nowrap gap-10">
     <mat-card class="lesson-card w-52">
-        <mat-card-header>
-            <div mat-card-avatar class="lesson-header-image"></div>
-            <mat-card-title>Lesson 1</mat-card-title>
-            <mat-card-subtitle>Description</mat-card-subtitle>
-        </mat-card-header>
-        <mat-divider></mat-divider>
         <mat-card-content>
-            <mat-stepper orientation="vertical" [linear]="true" #stepper>
-                <mat-step >
-                  Step 1
-                </mat-step>
-                <mat-step >
-                  Step 2
-                </mat-step>
-                <mat-step>
-                  <ng-template matStepLabel>Done</ng-template>
-                  <p>You are now done.</p>
-                </mat-step>
-              </mat-stepper>
+            <div [innerHTML]="steps | markdown"></div>
         </mat-card-content>
     </mat-card>
     <div class="lesson-content flex-1">
